# opentelemetry-lab

./: .dprint.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-apps.yaml  docker-compose-core.yaml  docker-compose-greptimedb.yaml  docker-compose-lgtm.yaml  docker-compose-signoz.yaml  docker-compose-victoriastack.yaml  docker-compose.yaml
.github/: issue_label_bot.yaml  label-commenter-config.yml  labeler.yml  pr-branch-labeler.yml  release-drafter.yml  renovate.json5  settings.yml  stale.yml
.github/workflows/: argo-build.yml  build-go.yaml  build-java.yaml  build-js.yaml  build-python.yaml  build-react.yaml  build-rust.yaml  build-swift.yaml  build-ts.yaml  build-zig.yml  flux-build.yml  flux-e2e.yml  flux-opa.yml  flux-schedule.yml  issues-labels-comments.yml  issues-labels-required.yml  project-labels.yml  project-pr-labeler.yml  projects-issues.yml  projects-pull-requests.yml  prow-lgtm-merge.yml  prow-lgtm-pull.yml  prow.yml  rebase.yml  release-drafter.yml  release-labels.yml  scorecards.yml  size.yaml
apps/otel-go/: Dockerfile  go.mod  go.sum  handlers.go  http.go  main.go  otlp.go
apps/otel-go/client/: http.go
apps/otel-go/errors/: http.go
apps/otel-go/handlers/: app.go  health.go  metrics.go  service.go
apps/otel-go/router/: router.go
apps/otel-go/telemetry/: buildinfo.go  logger.go  meter.go  metrics.go  otel.go  tracer.go
apps/otel-java/: Dockerfile  README.md  build.gradle.kts  pom.xml
apps/otel-java/src/main/java/xyz/lamirault/otel/app/: AppApplication.java
apps/otel-java/src/main/java/xyz/lamirault/otel/app/controller/: CoreController.java
apps/otel-java/src/main/java/xyz/lamirault/otel/app/service/: CoreService.java
apps/otel-java/src/main/java/xyz/lamirault/otel/app/telemetry/: LoggingConfiguration.java  MetricsConfiguration.java  OpenTelemetryConfiguration.java  ResourceConfiguration.java  TracingConfiguration.java
apps/otel-java/src/main/resources/: log4j2.xml
apps/otel-js/: Dockerfile  README.md  app.js  package-lock.json  package.json  pnpm-lock.yaml
apps/otel-js/src/: app.js  constants.js
apps/otel-js/src/middleware/: logger.js
apps/otel-js/src/routes/: chain.js  error.js  health.js  index.js  metrics.js  root.js  version.js
apps/otel-js/src/telemetry/: logger.js  meter.js  metrics.js  otel.js  tracer.js
apps/otel-python/: Dockerfile  README.md  main.py  pyproject.toml
apps/otel-python/otelpython/: __init__.py  application.py  constants.py  exceptions.py  settings.py  version.py
apps/otel-python/otelpython/api/: chain.py  health.py  root.py  version.py
apps/otel-python/otelpython/telemetry/: logger.py  meter.py  metrics.py  otel.py  tracer.py  traces.py
apps/otel-react/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
apps/otel-react/public/: manifest.json
apps/otel-react/src/: App.tsx  index.tsx  react-app-env.d.ts  reportWebVitals.ts  setupTests.ts
apps/otel-react/src/components/: Home.tsx  NoMatch.tsx  Router.tsx  Version.tsx
apps/otel-react/src/faro/: index.ts  initialize.ts
apps/otel-rust/: Cargo.toml  Dockerfile
apps/otel-rust/src/: constants.rs  handlers.rs  main.rs  otel.rs
apps/otel-rust/src/otel/: config.rs  metrics.rs  otel_logger.rs  otel_meter.rs  otel_tracer.rs  resource_provider.rs
apps/otel-rust/src/routes/: chain.rs  health.rs  mod.rs  root.rs  version.rs
apps/otel-swift/: Dockerfile  Package.resolved  Package.swift  README.md
apps/otel-swift/Sources/App/: Configure.swift  Entrypoint.swift  Routes.swift  Settings.swift
apps/otel-swift/Sources/App/Errors/: AppError.swift  OTelError.swift
apps/otel-swift/Sources/App/Routes/: HealthRoutes.swift  RootRoutes.swift  VersionRoutes.swift
apps/otel-swift/Sources/App/Services/: OTelLogger.swift  OTelMeter.swift  OTelTracer.swift  Otel.swift
apps/otel-swift/Sources/App/Utilities/: Constants.swift
apps/otel-swift/Tests/AppTests/: AppTests.swift
apps/otel-ts/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
apps/otel-ts/src/: index.ts
apps/otel-ts/src/app/: index.ts  initialize.ts
apps/otel-ts/src/logger/: index.ts  initialize.ts  logger.ts
apps/otel-ts/src/otel/: constants.ts  index.ts  initialize.ts  logger.ts  logging.ts  meter.ts  tracer.ts
apps/otel-ts/src/routes/: health.ts  index.ts  root.ts  routes.ts  version.ts
apps/otel-ts/src/traces/: index.ts  span.ts  tracer.ts
apps/otel-zig/: build.zig  build.zig.zon
apps/otel-zig/src/: constants.zig  main.zig
apps/otel-zig/src/routing/: chain.zig  health.zig  root.zig  version.zig
doc/: diagram.d2
etc/alloy/: config.alloy
etc/clickhouse/: cluster.xml  config.xml  storage.xml  users.xml
etc/grafana/: dashboards-lgtm.yaml  dashboards-victoriastack.yaml  dashboards.yaml  datasource-clickhouse.yml  datasource-lgtm.yml  datasource-victoriastack.yml  datasource.yml
etc/grafana/dashboards/: grafana-dashboard-jvm-metrics.json  grafana-dashboard-red-metrics-classic.json  grafana-dashboard-red-metrics-native.json  otel-apm.json
etc/grafana/dashboards/lgtm/: jvm.json  otel-collector.json
etc/grafana/dashboards/victoriastack/: otel-collector.json
etc/loki/: config.yaml
etc/otel/: otel-collector-greptimedb.yaml  otel-collector-lgtm.yaml  otel-collector-signoz.yaml  otel-collector-victoriastack.yaml  otel-collector.yaml
etc/pyroscope/: config.yaml
etc/signoz/: prometheus.yml
etc/tempo/: config.yaml
hack/: LICENSE.txt  traffic.sh
