# Copyright (c) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "otel-python"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "httpx>=0.27.2",
    "opentelemetry-api==1.27.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp==1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "opentelemetry-sdk==1.27.0",
    "python-json-logger>=2.0.7",
    "uvicorn==0.31.0",
]
