# Copyright (c) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "otel-rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
axum-tracing-opentelemetry = "0.21.1"
log = "0.4.22"
opentelemetry = { version = "0.26.0", features = ["metrics", "trace"] }
opentelemetry-appender-log = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = [
    "metrics",
    "grpc-tonic",
] }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-stdout = { version = "0.26.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.26.0", features = ["async-std", "rt-tokio"] }
reqwest = "0.12.8"
serde_json = "1.0.128"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = "0.3.18"
