# Copyright (c) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "otel-rust"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false
autobenches = false

[[bin]]
name = "otel-rust"
path = "src/main.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["trace", "metrics", "logs"]
trace = ["opentelemetry/trace", "opentelemetry_sdk/trace"]
metrics = ["opentelemetry/metrics", "opentelemetry_sdk/metrics"]
logs = ["opentelemetry/logs", "opentelemetry_sdk/logs", "opentelemetry_sdk/spec_unstable_logs_enabled"]

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
axum-tracing-opentelemetry = "0.21.1"
log = "0.4.22"
opentelemetry = { version = "0.30.0", features = ["trace", "metrics", "logs"] }
opentelemetry-appender-log = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-http = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = [
  "trace",
  "metrics",
  "logs",
  "internal-logs",
  "grpc-tonic",
  "reqwest-client",
  "http-proto",
] }
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry-stdout = { version = "0.30.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.30.0", features = ["trace", "metrics", "logs"] }
opentelemetry-resource-detectors = { version = "0.9.0" }
reqwest = "0.12.8"
serde_json = "1.0.128"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["std"] }
tracing-core = "0.1.32"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter","registry", "std", "fmt"] }
